$Id$

Denora v1.4.6-SVN
-------------

Additions
11/02/11 r416 Added support for ircd-rizon

Changes
11/02711 r419 Updated Denora icon
11/02/11 r416 Updated Windows installer

Fixes
11/02/11 r417 Fixed Denora not running on Windows XP/2003 anymore
11/02/11 r416 Scarynet module was not compiled on windows

Removals
11/02/11 r418 Removed support for Nefarious ircd 1.0-1.2
11/02/11 r416 Removed support for Asuka ircd
11/02/11 r416 Removed support for Hybrid ircd
11/02/11 r416 Removed support for Hyperion ircd
11/02/11 r416 Removed support for ngircd
11/02/11 r416 Removed support for Plexus3 ircd
11/02/11 r416 Removed support for Solidircd
11/02/11 r416 Removed support for Ultimate3 ircd

Developers
Denora Team <dev@denorastats.org>

Contributors
n/a


Denora v1.4.5
-------------

Additions
11/01/02 r402 Added cron script to automatically update GeoIP db files monthly
11/01/11 r391 Win32 compilation: added support for VS 2010, WinSDK 7.1 and MySQL 5.5
10/12/30 r379 [4] Added GeoIP IPv6 support
10/12/29 r374 [2] Added support for user IPv6 addresses with scarynet
10/12/29 r373 [2] Added support for user IPv6 addresses with ircu and unrealircd
10/05/25 r355 [3] Added Portuguese language file

Changes
11/02/03 r406 Updated IPv6 GeoIP database
11/02/02 r404 Updated IPv4 GeoIP database
11/02/01 r401 The GeoIP databases now get reloaded on rehash
11/01/04 r388 [4] Cleanup in protocols and assuming first SERVER to be uplink
11/07/04 r383 Updated german language file
11/01/03 r381 [4] Updated scarynet module to take advantage of IRCu 2.10.12
10/12/29 r376 Updated GeoIP API to v1.4.6
10/07/17 r363 Renamed STATS command to STATUS
10/07/05 r361 do_p10_burst now supports +L channel mode
10/07/02 r358 inspircd12 module declared compatible with inspircd 2.0

Fixes
11/02/07 r411 Fixed KILL parsing in inspircd12 module
11/02/03 r407 Fixed MOTD request not being sent out correctly in inspircd12 [closes #1242]
11/02/03 r407 Fixed handling of bogus ADDLINE messages from inspircd12