@@ -4,6 +4,7 @@ Denora v1.4.6-SVN
 -------------
 
 Additions
+11/02/12 r421 Added support for accounts on Charybdis
 11/02/11 r416 Added support for ircd-rizon
 
 Changes
@@ -11,6 +12,7 @@ Changes
 11/02/11 r416 Updated Windows installer
 
 Fixes
+11/02/12 r421 Fixed memleaks and crashbug in do_p10account
 11/02/11 r417 Fixed Denora not running on Windows XP/2003 anymore
 11/02/11 r416 Scarynet module was not compiled on windows
 
